[gd_scene load_steps=2 format=3 uid="uid://cbjb6xi5le3ja"]

[ext_resource type="Script" uid="uid://bsukmdig1r3rq" path="res://interaction/interaction_area.gd" id="1_wmbv7"]

[node name="InteractionArea" type="Area2D"]
collision_layer = 4
collision_mask = 8
script = ExtResource("1_wmbv7")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
